# rpmpm

./: .gitignore  Cargo.toml  README.md
resources/tests/: basic.json  basic.md  citations-citeproc-cmark.html  citations-citeproc.html  citations.md  footnote-defs-multiline.md  footnote-defs-without-blank-line.md  footnote-with-link-references-nested-footnote-defs.md  footnotes-links.md  indented-codeblock.md  link-reference-upperlowercase.md  links-in-footnote.md  list-item-with-gap-and-footnote-defs-and-link-defs.md  list-item-with-gap-at-end-with-refdef.md  list-item-with-gap.md  long.json.xz  long.md.xz  multiple-metablocks.md  my.bib  my2.bib  title-title.html  title.md  two-bibs-toc-relative-link-citeproc-cmark.html  two-bibs-toc-relative-link-citeproc.html  two-bibs-toc-relative-link-linkblock.html  two-bibs-toc-relative-link.md
src/: lib.rs  main.rs  md.rs  md_cmark.rs  server.rs
src/md_cmark/: split_md.rs
src/server/: auth.rs
tests/: end_to_end.rs
