[package]
name = "rpmpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cmark = ["dep:serde_yaml", "dep:pulldown-cmark", "dep:scraper", "dep:unicase"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_tuple = "0.5"
tokio = { version = "~1.28", features = ["full"] }
cached = "0.43"
futures = "0.3"
regex = "1"
lazy_static = "1.4"
tokio-tungstenite = "0.18"
futures-channel = "0.3"
rand = "0.8"
sha2 = "0.10"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
nix = "0.26"
clap = { version = "4.2", features = ["derive", "env"] }
anyhow = "1.0"
libsystemd = "0.6"
pulldown-cmark = { version = "0.9",  default-features = false, features = ["simd"], optional = true }
serde_yaml = { version = "0.9", optional = true }
scraper = { version = "0.16", optional = true }
unicase = { version = "2.6", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
indoc = "2.0"

[dev-dependencies]
lzma-rs = "0.3"
tempfile = "3"
libc = "0.2"
